[project]
name = "cve-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "openai>=2.7.1",
    "openai-agents>=0.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
